--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: BY Blog
+title: BY ChuDong
 SEOTitle: 初冬的博客 | BY ChuDong
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 初冬的博客, 邢伟伟, java"
+keyword: "BY, BY ChuDong, 初冬的博客, 邢伟伟, java"
 url: "http://xingweiweiblog.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/xingweiweiblog/xingweiweiblog.github.io.git" # you code repository
@@ -18,7 +18,7 @@ sidebar-avatar: /img/head.jpg      # use absolute URL, seeing it's used in both 
 
 # SNS settings
 RSS: false
-weibo_username:     用户5281634241
+weibo_username:     5281634241
 zhihu_username:     绝口不提
 github_username:    xingweiweiblog
 #facebook_username:
