--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/head.jpg      # use absolute URL, seeing it's used in both 
 # SNS settings
 RSS: false
 weibo_username:     5281634241
-zhihu_username:     绝口不提
+zhihu_username:     jue-kou-bu-ti-59-69
 github_username:    xingweiweiblog
 #facebook_username:
 jianshu_username:   f31752c0583d
